# MarketMindAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.agents/skills/: superpowers
frontend/: README.md  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: research-workbench.tsx
frontend/lib/: api-types.ts
frontend/public/: layout.css
marketmind_ai/: __init__.py  config.py  default_config.py  pathing.py
marketmind_ai/agents/: __init__.py  schemas.py  state.py
marketmind_ai/cli/: __init__.py  announcements.py  config.py  main.py  models.py  stats_handler.py  utils.py
marketmind_ai/dataflows/: __init__.py  alpha_vantage.py  (+17 more)
tests/: conftest.py  test_alpha_vantage_dataflows.py  test_checkpoint_resume.py  test_cli_interactive.py  test_cli_package.py  test_dataflows_config.py  test_deepseek_reasoning.py  test_fundamentals_rag.py  test_google_api_key.py  test_memory_log.py  test_memory_retrieval.py  test_model_validation.py  test_news_rag.py  test_outcome_evaluator.py  test_report_quality.py  test_report_quality_gate.py  test_report_verifier.py  test_reporting_snapshot_export.py  test_safe_ticker_component.py  test_sec_filings.py  test_signal_processing.py  test_stockstats_utils.py  test_structured_agents.py  test_symbol_resolution.py  test_symbol_resolution_api.py  test_symbols.py  test_ticker_symbol_handling.py  test_verification.py  test_web_app.py  test_web_models.py  test_workflow.py  test_yfinance_dataflow.py
(+98 files in other folders)
