[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind-ai-rebuild"
version = "0.1.0"
description = "Fresh rewrite of an evidence-backed multi-agent market research workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "stockstats>=0.6.5",
    "typer>=0.21.0",
    "langchain-core>=0.3.81",
    "langchain-anthropic>=0.3.12",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.11.0",
    "pytest>=8.4.0",
    "yfinance>=0.2.63",
]

[project.scripts]
marketmind-ai = "marketmind_ai.cli.main:main"
marketmind-ai-web = "marketmind_ai.web.app:run"

[tool.setuptools.packages.find]
include = ["marketmind_ai*"]

[tool.setuptools.package-data]
"marketmind_ai.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
